unpackaged/main/default/objects/ClinicalEncounter/ClinicalEncounter.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>