unpackaged/main/default/objects/ClinicalEncounter/fields/Client_DOB__c.field-meta.xml
<CustomField>
    <fullName>Client_DOB__c</fullName>
    <formula>Patient.PersonBirthdate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client DOB</label>
    <type>Date</type>
</CustomField>