unpackaged/main/default/objects/ClinicalEncounter/fields/Client_Status__c.field-meta.xml
<CustomField>
    <fullName>Client_Status__c</fullName>
    <formula>TEXT(Patient.Status__c)</formula>
    <label>Client Status</label>
    <type>Text</type>
</CustomField>