unpackaged/main/default/objects/ClinicalEncounter/fields/Details_if_known__c.field-meta.xml
<CustomField>
    <fullName>Details_if_known__c</fullName>
    <label>Details, if known</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>