unpackaged/main/default/objects/ClinicalEncounter/fields/Discharged_to__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to__c</fullName>
    <label>Discharged to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Community Health</fullName>
            </value>
            <value>
                <fullName>Private Practice</fullName>
            </value>
            <value>
                <fullName>Other Mental Health Team</fullName>
            </value>
            <value>
                <fullName>Not Referred</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>