unpackaged/main/default/objects/ClinicalEncounter/fields/Episode_Type__c.field-meta.xml
<CustomField>
    <fullName>Episode_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Episode Type</label>
    <type>Text</type>
</CustomField>