unpackaged/main/default/objects/ClinicalEncounter/fields/Further_Details__c.field-meta.xml
<CustomField>
    <fullName>Further_Details__c</fullName>
    <label>Further Details</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>