unpackaged/main/default/objects/ClinicalEncounter/fields/Involuntary_flag__c.field-meta.xml
<CustomField>
    <fullName>Involuntary_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Involuntary flag</label>
    <type>Checkbox</type>
</CustomField>