unpackaged/main/default/objects/ClinicalEncounter/fields/Is_Pension_a_Main_Source_of_Income__c.field-meta.xml
<CustomField>
    <fullName>Is_Pension_a_Main_Source_of_Income__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pension a Main Source of Income?</label>
    <type>Checkbox</type>
</CustomField>