unpackaged/main/default/objects/ClinicalEncounter/fields/Key_Worker__c.field-meta.xml
<CustomField>
    <fullName>Key_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Worker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>notEqual</operation>
            <value>Customer Portal User</value>
        </filterItems>
        <infoMessage>Key worker must be an internal user.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Clinical_Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>