unpackaged/main/default/objects/ClinicalEncounter/fields/Lives_with__c.field-meta.xml
<CustomField>
    <fullName>Lives_with__c</fullName>
    <label>Lives with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Two biological parents</fullName>
            </value>
            <value>
                <fullName>Two adoptive parents</fullName>
            </value>
            <value>
                <fullName>Mother and Stepfather/defacto/other</fullName>
            </value>
            <value>
                <fullName>Father and StepMother/defacto/other</fullName>
            </value>
            <value>
                <fullName>Mother alone</fullName>
            </value>
            <value>
                <fullName>Father alone</fullName>
            </value>
            <value>
                <fullName>Relatives</fullName>
            </value>
            <value>
                <fullName>Foster parents</fullName>
            </value>
            <value>
                <fullName>Institution</fullName>
            </value>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>DCP Care Arrangement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>