unpackaged/main/default/objects/ClinicalEncounter/fields/Living_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>Living_Arrangements__c</fullName>
    <label>Living Arrangements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Lives alone</fullName>
            </value>
            <value>
                <fullName>Lives with family</fullName>
            </value>
            <value>
                <fullName>Lives with others</fullName>
            </value>
            <value>
                <fullName>Not stated /Inadequately described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>