unpackaged/main/default/objects/ClinicalEncounter/fields/MH_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>MH_Legal_Status__c</fullName>
    <label>MH Legal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voluntary</fullName>
            </value>
            <value>
                <fullName>Involuntary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>