unpackaged/main/default/objects/ClinicalEncounter/fields/Other_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Other_Diagnoses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Diagnoses</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>ICD10</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Clinical Encounters (Other Diagnoses)</relationshipLabel>
    <relationshipName>Clinical_Encounters3</relationshipName>
    <type>Lookup</type>
</CustomField>