unpackaged/main/default/objects/ClinicalEncounter/fields/Other_service__c.field-meta.xml
<CustomField>
    <fullName>Other_service__c</fullName>
    <label>Other service</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Discharged_to__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aboriginal Health</fullName>
            </value>
            <value>
                <fullName>Anglicare SA</fullName>
            </value>
            <value>
                <fullName>ARSH Support Services</fullName>
            </value>
            <value>
                <fullName>Baptist Community Service</fullName>
            </value>
            <value>
                <fullName>Beyond blue limit</fullName>
            </value>
            <value>
                <fullName>CACP</fullName>
            </value>
            <value>
                <fullName>Carer Allowance</fullName>
            </value>
            <value>
                <fullName>Carer Support &amp; Respite Centre Inc</fullName>
            </value>
            <value>
                <fullName>Carers Association of SA Inc</fullName>
            </value>
            <value>
                <fullName>Carers link Barossa and Districts Inc</fullName>
            </value>
            <value>
                <fullName>Catherine House</fullName>
            </value>
            <value>
                <fullName>CBS (Community Bridging Services Inc)</fullName>
            </value>
            <value>
                <fullName>Centacare</fullName>
            </value>
            <value>
                <fullName>Central Museum</fullName>
            </value>
            <value>
                <fullName>Centrelink</fullName>
            </value>
            <value>
                <fullName>CHAP</fullName>
            </value>
            <value>
                <fullName>CLO (Community Living Options Inc)</fullName>
            </value>
            <value>
                <fullName>Clubhouse SA Inc</fullName>
            </value>
            <value>
                <fullName>Community Ground Adelaide</fullName>
            </value>
            <value>
                <fullName>Community Health Centr</fullName>
            </value>
            <value>
                <fullName>Community Support Inc (CSI)</fullName>
            </value>
            <value>
                <fullName>Correctional Services/Forensic</fullName>
            </value>
            <value>
                <fullName>Country North Community Services Inc</fullName>
            </value>
            <value>
                <fullName>CSA (Child Sexual Assault)</fullName>
            </value>
            <value>
                <fullName>D/V Services (Domestic Violence)</fullName>
            </value>
            <value>
                <fullName>DASSA (Drug and Alcohol Services SA)</fullName>
            </value>
            <value>
                <fullName>Day Therapy</fullName>
            </value>
            <value>
                <fullName>Department for Child Protection (was Families SA)</fullName>
            </value>
            <value>
                <fullName>Disability SA</fullName>
            </value>
            <value>
                <fullName>Domiciliary Care Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>