unpackaged/main/default/objects/ClinicalEncounter/fields/Previous_Psychiatric_History__c.field-meta.xml
<CustomField>
    <fullName>Previous_Psychiatric_History__c</fullName>
    <label>Previous Psychiatric History?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>