unpackaged/main/default/objects/ClinicalEncounter/fields/Primary_Team__c.field-meta.xml
<CustomField>
    <fullName>Primary_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Team</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Team</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clinical Encounters (Primary Team)</relationshipLabel>
    <relationshipName>Clinical_Encounters1</relationshipName>
    <type>Lookup</type>
</CustomField>