unpackaged/main/default/objects/ClinicalEncounter/fields/Principal_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Principal_Diagnosis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Principal Diagnosis</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>ICD10</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Clinical Encounters (Principal Diagnosis)</relationshipLabel>
    <relationshipName>Clinical_Encounters2</relationshipName>
    <type>Lookup</type>
</CustomField>