unpackaged/main/default/objects/ClinicalEncounter/fields/Reason_for_Discharge__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discharge__c</fullName>
    <label>Reason for Discharge</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required - Problem Resolved</fullName>
            </value>
            <value>
                <fullName>Not Required - In Residential Care</fullName>
            </value>
            <value>
                <fullName>Referred to Other Residential Care</fullName>
            </value>
            <value>
                <fullName>Client Moved out of Area</fullName>
            </value>
            <value>
                <fullName>Client Died</fullName>
            </value>
            <value>
                <fullName>Client Terminated Service</fullName>
            </value>
            <value>
                <fullName>Discharge/Transfer to another Service</fullName>
            </value>
            <value>
                <fullName>Episode Integration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>