unpackaged/main/default/objects/ClinicalEncounter/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <label>Referral Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>