unpackaged/main/default/objects/ClinicalEncounter/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01 Self</fullName>
            </value>
            <value>
                <fullName>02 Family, Significant Other, Friend</fullName>
            </value>
            <value>
                <fullName>03 General Practitioner</fullName>
            </value>
            <value>
                <fullName>04 Specialised Aged/Disability Assessment Team</fullName>
            </value>
            <value>
                <fullName>06 Community Nursing Service</fullName>
            </value>
            <value>
                <fullName>07 Hospital - Public</fullName>
            </value>
            <value>
                <fullName>08 Psychiatric/Mental Health Service Facility</fullName>
            </value>
            <value>
                <fullName>11 Govt Residential Aged Care Facility</fullName>
            </value>
            <value>
                <fullName>12 Aboriginal Health Service</fullName>
            </value>
            <value>
                <fullName>14 Other Community Based Govt Medical/Health Service</fullName>
            </value>
            <value>
                <fullName>15 Other Govt Medical Health Service</fullName>
            </value>
            <value>
                <fullName>16 Other Govt Community Based Service</fullName>
            </value>
            <value>
                <fullName>17 Hospital -Private</fullName>
            </value>
            <value>
                <fullName>18 Non-Govt Residential Aged Care Facility</fullName>
            </value>
            <value>
                <fullName>19 Other non-Govt Medical/Health Service</fullName>
            </value>
            <value>
                <fullName>20 Other non-Govt Community Based Service</fullName>
            </value>
            <value>
                <fullName>21 Justice System</fullName>
            </value>
            <value>
                <fullName>22 Other</fullName>
            </value>
            <value>
                <fullName>99 Not Stated/Inadequately Described</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>