unpackaged/main/default/objects/ClinicalEncounter/fields/Secondary__c.field-meta.xml
<CustomField>
    <fullName>Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>ICD10</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Clinical Encounters (Secondary)</relationshipLabel>
    <relationshipName>Clinical_Encounters1</relationshipName>
    <type>Lookup</type>
</CustomField>