unpackaged/main/default/objects/ClinicalEncounter/fields/Secondary_Key_Worker__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Key_Worker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Key Worker</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Episodes2</relationshipName>
    <type>Lookup</type>
</CustomField>