unpackaged/main/default/objects/ClinicalEncounter/fields/Treatment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Treatment_End_Date__c</fullName>
    <label>Treatment End Date</label>
    <type>Date</type>
</CustomField>