unpackaged/main/default/objects/ClinicalEncounter/recordTypes/Ambulatory.recordType-meta.xml
<RecordType>
    <fullName>Ambulatory</fullName>
    <active>true</active>
    <label>Ambulatory</label>
</RecordType>