unpackaged/main/default/objects/ClinicalEncounter/recordTypes/Community_Residential.recordType-meta.xml
<RecordType>
    <fullName>Community_Residential</fullName>
    <active>true</active>
    <label>Community Residential</label>
</RecordType>