unpackaged/main/default/objects/ClinicalEncounter/recordTypes/Inpatient.recordType-meta.xml
<RecordType>
    <fullName>Inpatient</fullName>
    <active>true</active>
    <label>Inpatient</label>
</RecordType>