unpackaged/main/default/objects/ClinicalEncounter/validationRules/End_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(EndDate)),
OR(DATEVALUE(EndDate ) &gt; TODAY(),
AND(NOT(ISBLANK(Treatment_End_Date__c)) ,
Treatment_End_Date__c &gt; DATEVALUE(EndDate))
))</errorConditionFormula>
    <errorDisplayField>EndDate</errorDisplayField>
    <errorMessage>End Date should be less than future date and greater than Treatment End Date.</errorMessage>
</ValidationRule>