unpackaged/main/default/objects/ClinicalEncounter/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(StartDate)),
				DATEVALUE(StartDate)  &gt; TODAY())</errorConditionFormula>
    <errorDisplayField>StartDate</errorDisplayField>
    <errorMessage>Start Date can not be future date.</errorMessage>
</ValidationRule>