unpackaged/main/default/objects/ClinicalEncounter/validationRules/Trea_Start_Date_Check_On_Treat_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Trea_Start_Date_Check_On_Treat_End_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Treatment_Start_Date__c),
				NOT(ISBLANK(Treatment_End_Date__c)))</errorConditionFormula>
    <errorDisplayField>Treatment_Start_Date__c</errorDisplayField>
    <errorMessage>Treatment Start Date can not be blank.</errorMessage>
</ValidationRule>