unpackaged/main/default/objects/ClinicalEncounter/validationRules/Treatment_Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Treatment_Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Treatment_Start_Date__c)),
			OR(Treatment_Start_Date__c &gt; TODAY(),
				AND(NOT(ISBLANK(StartDate)) ,
								Treatment_Start_Date__c &lt; DATEVALUE(StartDate))
					))</errorConditionFormula>
    <errorDisplayField>Treatment_Start_Date__c</errorDisplayField>
    <errorMessage>Treatment Start Date should not be greater than future date and  less than Start Date.</errorMessage>
</ValidationRule>